API: get login options
